# fastapi-base

./: README.md  main.py  pyproject.toml
api/: __init__.py
api/auth/: auth_api.py
api/user/: user_api.py
app/auth/services/: jwt_service.py
app/user/services/: user_service.py
core/: config.py  server.py
core/db/mixins/: timestamp_mixin.py
core/exceptions/: token.py  user.py
core/utils/: hash_helper.py  token_helper.py
docker/api/: startup.sh
docker/db/: Dockerfile
migrations/: env.py
models/: __init__.py  user.py
schemas/: base.py
schemas/user/: user_schema.py
