[tool.poetry]
name = "Fast API"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.2.2"
alembic = "^1.8.1"
pyjwt = "^2.5.0"
fastapi = "^0.85.1"
aiomysql = "^0.1.1"
click = "^8.1.3"
uvicorn = "^0.18.3"
celery = "^5.2.7"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.5.0"
greenlet = "^1.1.3.post0"
redis = "^4.3.4"
sqlalchemy = {version = "^1.4.42", extras = ["asyncio"]}


[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
